# uftp

./: .gitignore  CMakeLists.txt  HOW_IT_WORKS.md  README.md
.history-final/: .gitignore  INTERVIEW_NOTES.md  README.md
.history-final/include/uftp/: codec.h  fileio.h  net.h  opts.h  protocol.h  sender.h  stats.h  ui.h  window.h
.history-final/scripts/: bench.ps1
.history-final/src/: common.c  net.c  opts.c  receiver.c  sender.c  ui.c  window.c
.history-snapshots/c1/: CMakeLists.txt  common.h  main.c  protocol.h
.history-snapshots/c2/: net.c
.history-snapshots/c4/: common.c  common.h  main.c  net.c  receiver.c  receiver.h  sender.h  stats.c  stats.h
.history-snapshots/c5/: receiver.c  sender.c
include/uftp/: common.h  net.h  receiver.h
scripts/: rebuild-history.ps1
src/: codec.c  fileio.c  main.c  sender.c  stats.c
